# QtBasedGUI

./: CMakeLists.txt  main.cpp  mainwindow.cpp  ui_mainwindow.hpp
ui/: mainwindow.ui
